--- a/en/_posts/2022-07-05-fckptn.md
+++ b/en/_posts/2022-07-05-fckptn.md
@@ -5,7 +5,7 @@ cover: "fckptn.jpg"
 
 # FCKPTN: Russia is a terrorist state. Updates on War in Ukraine 🇺🇦
 
-This page are my regular updates on the state of the [Russia's terrorist attack on Ukraine - Putin's act of War](/nowar/) which has been going on for more than 100 days now. Remember, Ukraine 🇺🇦 is not just fighting for its freedom, but for freedom of all the European Union 🇪🇺 and the world! ✌️ Fuck Putin! FCKPTN! 🖕
+This page are my regular updates on the state of the [Russia's terrorist attack on Ukraine - Putin's act of War](/nowar/) which has been going on for more than 7 months now. Remember, Ukraine 🇺🇦 is not just fighting for its freedom, but for freedom of all the European Union 🇪🇺 and the world! ✌️ Fuck Putin! FCKPTN! 🖕
 
 <!--More-->
 
@@ -15,6 +15,188 @@ This page are my regular updates on the state of the [Russia's terrorist attack 
 {:toc}
 
 ## FCKPTN Updates
+
+### October 14 - Russian are using rape as a weapon of war in Ukraine
+
+> Russia🇷🇺 is using rape as part of a deliberate military strategy in Ukraine🇺🇦 Russian troops have raped more than 100 Ukrainians with victims as young as FOUR (4 years old‼️) as part of military strategy that has seen troops equipped with Viagra, @UN says
+
+[Daily Mail reports](https://www.dailymail.co.uk/news/article-11315675/Russian-using-rape-weapon-war-Ukraine-says.html)
+
+### October 13 - Angela Merkel - no regrets on energy policy with Russia
+
+[Apparently admitting mistakes is not her thing](https://www.reuters.com/world/europe/merkel-no-regrets-energy-policy-with-russia-2022-10-13/)
+
+### October 13 - children kidnapped from Ukraine are being adopted in Russia far away…
+
+[…truly awful: Secrecy of adoption will never let them learn were their parents killed, sent to concentration camps or deported](https://twitter.com/O_Ostapchuk/status/1580636236212936704)
+
+### October 12 - Russia's losses amount to 90K soldiers!
+
+[Russia's "irrecoverable losses" in the war with Ukraine have just become known: according to an FSB source, that figure is 90K](https://twitter.com/meduza_en/status/1580183189309763584)
+
+### October 10 - Retaliation by Russia - cruise missiles all over Ukraine - target mainly civilians!
+
+- [Russian cruise missile strikes on cities all over Ukraine, timed to maximize civilian casualties.](https://twitter.com/yarotrof/status/1579361570249134081)
+- [Park in Kyiv](https://twitter.com/mjluxmoore/status/1579357969577545729)
+- [General Sergey Surovikin is in charge](https://twitter.com/vtchakarova/status/1578882928117153792)
+- [At least 10 cities under attack](https://twitter.com/nytimes/status/1579407417883779072)
+
+BTW, here's [Russian's effort to cancel Ukrainian culture](https://twitter.com/NatallkaUKR/status/1579539045033865217)
+
+### October 7/8 - The bridge to Crimea has been blown up!
+
+- [Meme describing it](https://twitter.com/francis_scarr/status/1578659441159057408)
+- [Turns out many Dutch companies built the bridge by violating sanctions](https://twitter.com/AlyaShandra/status/1578728585816600577)
+- [President Zelensky addresses the attack](https://twitter.com/ChristopherJM/status/1578818668221562882)
+- [Blowing up a bridge is terrorism?](https://twitter.com/StephenKing/status/1578907731934982145)
+- [Ferry crossing is jammed](https://twitter.com/bayraktar_1love/status/1580230919306502151)
+
+### October 7 - Finnish prime minister tells Russia to leave Ukraine
+
+[She's brilliant](https://twitter.com/RikhardHusu/status/1578308226709590017)
+
+### October 6 - Russian terrorist attack on Zaporizhzhia. 7 missile strikes on residential buildings…
+
+[…in the city center!](https://twitter.com/maria_avdv/status/1577886672200601601)
+
+### October 5 - Czech Republic annexes Kaliningrad
+
+- [They make a Twitter "referendum"](https://nypost.com/2022/10/05/czechs-troll-russia-with-mock-annexation-of-kaliningrad/)
+- [As a joke, they annex Kaliningrad and troll about it on national TV](https://twitter.com/sadek/status/1578265854562615297)
+
+### October 3 - Russia annexes two region with fake referendums
+
+> The kremlin will consult its alter ego to define the [boundaries of its insanity.](https://twitter.com/DefenceU/status/1576907421385363456)
+
+[Elon Musk suggests legitimizing annexation](https://twitter.com/elonmusk/status/1576969255031296000) to which [Ukraine's ambassador responds](https://twitter.com/BNONews/status/1576989220937269249). All that [Starlink's goodwill gone](https://twitter.com/michaeldweiss/status/1576996948414181377). Is he a [Russian colonel](https://twitter.com/Sputnik_Not/status/1577966265695698944)?
+
+Update on October 14 - [he doesn't wan to pay for Starlink satellites in Ukraine](https://www.cnn.com/2022/10/13/politics/elon-musk-spacex-starlink-ukraine/index.html), yet [Ukrainians actually are paying for it out of their pockets!](https://twitter.com/dim0kq/status/1580827171903635456)
+
+Update on October 15 - [he backs out!](https://twitter.com/elonmusk/status/1581345747777179651)
+
+### October 2 - Pope Francis adresses president Zelensky to accept a "peace deal"
+
+[Writes in both Russian and Ukrainian, does not mention Russia as agressor, asks for the victim to accept peace](https://twitter.com/sumlenny/status/1576590825433489410)
+
+### September 30 - Missiles slammed into a car market in southern Ukraine, killing at least 23 people
+
+[…leaving bodies strewn across the ground, in an attack local officials blamed on Russia](https://twitter.com/Reuters/status/1575846677017157632)
+
+### September 27 - Nord Stream near Bornholm leaks, probably destroyed by Russian underwater ship
+
+- [Gas leak looks bad…](https://twitter.com/COUPSURE/status/1574741612093181952)
+- [50 years of German energy policy summarised](https://twitter.com/kamilkazani/status/1575157400142843905)
+- [Swedish navy ships surveying a submarine](https://twitter.com/azeem/status/1577311324417232897)
+- [Swedes don't want to say how they know this](https://www.reuters.com/world/europe/sweden-shuns-formal-joint-investigation-nord-stream-leak-citing-national-2022-10-14/)
+
+### September 24 - more Air Raids in Ukraine
+
+[Civilians and children still being ruthlessly killed by Russian missiles](https://twitter.com/Gerashchenko_en/status/1573626829340086275) - why are we not closing the Ukrainian Air Space???
+
+### September 21 - 7 Months in, Putin announced a partial mobilization order for some 300,000 reservists to join the war.
+
+> Russians panicking about mobilization 7 months into the war is fascinating to me. Did you not know your country started the bloodiest war in Europe since WWII? Were you really hoping to not be personally affected by it at all? [You thought only minorities would be sent to die?](https://twitter.com/yanamrzv/status/1572539876817670147)
+
+- [Putin is trash](https://twitter.com/Exen/status/1572581920613212161)
+- [Russians are escaping fast](https://twitter.com/flightradar24/status/1572630639655927815)
+- [Ukraine president has a plan to end the war](https://www.washingtonpost.com/nation/2022/09/21/united-nations-zelensky/)
+- [🇰🇿 Kazakhstan, 🇺🇿 Uzbekistan, and 🇰🇬 Kyrgyzstan banned their citizens from fighting in Ukraine.](https://twitter.com/ukraine_world/status/1572860339427110912)
+- [Middle Earth of Eastern Europe](https://twitter.com/dominiklada/status/1573057989686222848)
+- [Border of Georgia is jammed](https://twitter.com/nexta_tv/status/1573715805925261315)
+- [Russian men of military age…](https://twitter.com/DarthPutinKGB/status/1573983244181282817)
+- [They flee because they invaded…](https://twitter.com/mbk_center/status/1574663328408174597)
+- [Squid game in Russia in real life](https://twitter.com/DefenceU/status/1575173225197158407)
+- [260K men fled the country](https://twitter.com/Kasparov63/status/1575207957377302546)
+- [Tanks now with L instead of Z](https://twitter.com/AndrzejRysuje/status/1576523875961094144)
+
+### September 15 - 1000 dead bodies have been found in the newly captured town of Izyum, held by Russia for many months
+
+[Another Bucha, more Russian atrocities](https://twitter.com/JohnSimpsonNews/status/1570341055224221696)
+
+### September 14 - War in one word? Good. In two words? Not good.
+
+[How generals lie to Putin](https://twitter.com/ChrisO_wiki/status/1570169288849326082)
+
+### September 11 - pundits on Russian TV realize that their military is failing and their country is in trouble
+
+[Life comes at you fast](https://twitter.com/JuliaDavisNews/status/1569070513909022720)
+
+### September 1 - FIRST DAY OF SCHOOL - but not in 77 schools in Ukraine!
+
+[77 schools have been destroyed in half a year!](https://twitter.com/outrid3rs/status/1565365821781807108)
+
+### September 1 - Ravil Maganov, chairman of Russian Lukoil, falls from a window of a hospital
+
+[Key people in Russia have the weirdest accidents](https://twitter.com/spectatorindex/status/1565241549205561344)
+
+### August 26 - Pope Francis remarks the death of Dugin's daughter as the "death of the innocent"
+
+> I think of all the cruelty—of so many innocents who are paying the price for this madness. The madness is from all sides because war is madness and no one who is in a war can say, "No, I am not mad." War is mad. I think of a poor girl who was blown up by a bomb under her car seat in Moscow. The innocent pay for war. The innocent. [Rome Reports](https://www.romereports.com/en/2022/08/26/pope-francis-remarks-on-the-murder-of-darya-dugina-spark-controversy-in-ukraine/)
+
+Dmytro Kuleba, Ukrainian foreign minister… argues that Darya Dugina was not so innocent and calls her an advocate of Russian imperialism. He denies Ukraine's involvement in her murder and accuses Russia of killing her in order to create a martyr and blame Ukrainians.
+
+### August 21 - Six months of the war!
+
+[The Guardian reports](https://www.theguardian.com/world/2022/aug/20/six-months-of-hell-in-ukraine-how-putins-crazy-war-reached-deadlock)
+
+[Before and after - Kyiv region](https://twitter.com/golub/status/1561416322122240002)
+
+[AFP Photo report](http://u.afp.com/wFow)
+
+### August 17 - GOOD NEWS! 1,000 orphans between the ages of 3 and 18 from all across Ukraine…
+
+[…temporarily live at a hotel with their guardians near Warsaw, Poland](https://twitter.com/WCKitchen/status/1559724719812665344)
+
+### August 16 - Russian Oligarchs are NOT really being sanctioned - Alexey Navalny reports
+
+> From Day 1, Western leaders firmly stated  that Putin's oligarchs and bribe-takers would face imminent sanctions and wouldn’t get away this time. [But they did.](https://twitter.com/navalny/status/1559528130041319429)
+
+- [Alexei Miller, the head of Gazprom](https://twitter.com/navalny/status/1559528384732057600?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Abramovich, Putin's trusted wallet #2](https://twitter.com/navalny/status/1559528810789408771?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Forbes list of 200 richest Russians. Only 46 of them  are under EU, US or UK sanctions](https://www.forbes.ru/rating/426935-200-bogateyshih-biznesmenov-rossii-2021-reyting-forbes)
+- [Bokarev and Makhmudov. They are real mafiosi involved in organized crime](https://twitter.com/navalny/status/1559529222032564228?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Ziyad Manassir, who paid for Putin's palace… his whole family is still be able to live in the UK and France?](https://twitter.com/navalny/status/1559529322574225409?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Georgy Berezkin, responsible for destroying freedom of speech in Russia](https://twitter.com/navalny/status/1559529504078544897?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Liza Peskova, daughter of Putin's press secretary Peskov, has transferred the flat in Paris…](https://twitter.com/navalny/status/1559529755115929601?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+- [Valentina Tereshkova. The famous cosmonaut, but also member of the State Duma and the face of Putin's party. She can go on living in her house in Italy](https://twitter.com/navalny/status/1559529921051037696?s=20&t=i9IEs9lcWEipvmMWjS3NKg)
+
+> We must get the foreign officials to support our [List of 6,000](https://acf.international/list-of-war-enablers) or create their own instead of babbling on endlessly!
+
+### August 6 - Daily Mail reports war crimes in Kherson, The Guardian reports burnings!
+
+[War reporter exposes unimaginable evil in Kherson](https://www.dailymail.co.uk/news/article-11086027/Insider-accounts-obtained-veteran-war-reporter-expose-unimaginable-evil-Kherson.html)
+
+…and [The Guardian reports burning Ukrainians to death in a Russian prison camp](https://www.theguardian.com/world/2022/aug/06/russian-prison-camp-ukrainians-deaths-donetsk)
+
+### August 5 - Putin and Erdogan talk again, boost corporation and agree on rouble payments
+
+[Disgraceful. Turkey is complicit](https://twitter.com/Reuters/status/1555645037966499846).
+
+### August 4 - Amnesty International disgraces itself by victim-blaming Ukraine
+
+> Ukrainian forces have put civilians in harm’s way by establishing bases and operating weapons systems in populated residential areas. [Amnesty Tweet](https://twitter.com/amnesty/status/1555102962623594496)
+
+[Amnesty International works for Putin now?](https://twitter.com/Renew_Democracy/status/1555246878970843139) Seriously, [they are](https://twitter.com/Vorkoz/status/1555554872304467969).
+
+### July 25 - Russians terrorize occupied Ukraine
+
+> “Russian forces have turned occupied areas of southern Ukraine into an abyss of fear and wild lawlessness...Torture, inhumane treatment, as well as arbitrary detention of civilians, are among the apparent war crimes we have documented." [By HRW](https://twitter.com/anneapplebaum/status/1551584414336950273)
+
+### July 24 - NO WAR slogans in Germany are Russian propaganda
+
+> [«НЕТ ВОЙНЕ»](https://twitter.com/Kasparov63/status/1551299242936893447) reeks of privilege and virtue signalling. If you can say “no to war”, then you’re not at war; there is no russian army destroying your home and killing your loved ones.
+
+### July 23 - After a deal for grain export, Putin celebrates with striking Odesa
+
+[Deals with Putin make no sense](https://twitter.com/Kasparov63/status/1550886038620569600).
+
+### July 19 - Erdogan meets Putin yet again
+
+[And he makes Putin wait](https://twitter.com/TygodnikNIE/status/1549493810836684805).
+
+### July 17 - 8th year anniversary of MH17 airplane shot down by Russian BUK
+
+[I still can't believe it's been 8 years](https://twitter.com/Kasparov63/status/1548666546909638656) and all the western governments did not condemn Kremlin despite Russian army shot down a civilian plane with 298 people on board.
 
 ### July 8 - Russian army is looting Ukraine
 
