--- a/en/_posts/2022-09-27-airpods.md
+++ b/en/_posts/2022-09-27-airpods.md
@@ -39,6 +39,8 @@ After I wrote my short review, I saw this video by Marques and he's convincing e
 
 {% include video.html id="f3DfJxvkN-8" %}
 
-I just checked and my AirPods Pro are almost 3 years old (bought them on Nov 4, 2019!) and I use them every single day. Maybe I should get them?
+I just checked and my AirPods Pro are almost 3 years old (bought them on Nov 4, 2019!) and I use them every single day. Maybe I should get the new ones?
+
+*P.S. Update - [I got the new ones a month later](/airpodspro).*
 
 [n]: https://michael.gratis/nozbe
