linkedin links and change to share layout

--- a/en/_posts/2022-10-17-lose.md
+++ b/en/_posts/2022-10-17-lose.md
@@ -1,6 +1,7 @@
 ---
 tags: [nooffice]
 cover: "lose.jpg"
+linked: https://www.linkedin.com/posts/michaelsliwinski_nooffice-productivity-apple-activity-6988802183353798656-nnty
 ---
 
 # Companies that force people back to the office will lose
