vote fix headline

--- a/en/_posts/2022-11-08-vote.md
+++ b/en/_posts/2022-11-08-vote.md
@@ -3,7 +3,7 @@ tags: [short, life]
 cover: vote.jpg
 ---
 
-# Vote - why not voting is helping extremists ruin our world
+# Vote - please vote or the extremists will ruin our world
 
 Today are America’s Midterm elections which motivates me to write about the importance of going to vote. Of doing your civic, democratic duty. Make sure you’re registered to vote. And then go and vote. While voting, remember about one aspect of democracy that nobody talks about - democracy is not the rule of the majority. Not at all. It’s the rule of the vocal minority when the [good people do nothing and don’t vote](/nothing). Here’s why:
 
