--- a/en/_posts/2020-09-17-17c.md
+++ b/en/_posts/2020-09-17-17c.md
@@ -1,6 +1,7 @@
 ---
 tags: [business,nozbe]
 cover: "17.jpg"
+redirect_from: /17/
 ---
 
 # 17 commandments of work - my VISION for Nozbe team and Nozbe Teams product.
