fix avatar blog

--- a/en/_posts/2022-11-23-avatar.md
+++ b/en/_posts/2022-11-23-avatar.md
@@ -3,7 +3,7 @@ tags: [blogging]
 img: "avatar.jpg"
 ---
 
-## Updating my avatar for 2022 and beyond - more blue and more smiles for a better future!
+# Updating my avatar for 2022 and beyond - more blue and more smiles for a better future!
 
 About two years ago, I decided to [stop posting regularly on Facebook and Instagram](https://www.instagram.com/p/CBDJ6EkHwin/) and I announced it with a very dark avatar which I later uploaded to all my social media profiles. Recently as I started posting more regularly both here on this blog as well as on my [LinkedIn page][l], I decided to update the avatar and go for my favorite color - blue, I hope you like it:
 
