domain banner support

--- a/en/_posts/2015-08-03-qtbar.md
+++ b/en/_posts/2015-08-03-qtbar.md
@@ -1,6 +1,7 @@
 ---
 tags: [projects]
 img: "qtbar.jpg"
+domain: QTbar.com
 ---
 
 # QTbar - my first small global "success" - a launcher toolbar app for Windows 98/Me/XP
