journal shortcuts update

--- a/en/_posts/2022-09-15-journal22.md
+++ b/en/_posts/2022-09-15-journal22.md
@@ -82,10 +82,13 @@ And if you have any questions, [feel free to get in touch!](/contact/)
 
 Good luck!
 
+## Version history of "Journal and Planning" shortcut
 
+- 1.1 - 2022, 25 November - small formatting improvement for goals in iOS16
+- 1.0 - 2022, 15 September - initial version based on [basic journaling](/journal-basic/)
 
 [j]: https://www.icloud.com/shortcuts/ba98f376fdc04cacb034815eccc7b61f
-[jp]: https://www.icloud.com/shortcuts/a480002bce0e4e04a94c91a595aebd37
+[jp]: https://www.icloud.com/shortcuts/bc64ceb5e8ac4e6680dc746744304109
 [jt]: https://www.icloud.com/shortcuts/e8c21726f6b94de185f6aef0dbc0da23
 [m]: /markdown/
 
