--- a/pl/_posts/2022-06-17-dziennik.md
+++ b/pl/_posts/2022-06-17-dziennik.md
@@ -26,16 +26,17 @@ Skrót ten nie wymaga żadnej zewnętrznej aplikacji. Oto co się dzieje po jeg
 
 Poniżej do pobrania skrót po polsku i po angielsku. Zapraszam do pobierania zupełnie za darmo. Jest to standardowy Skrót Siri, więc możesz go modyfikować dowolnie do Twoich potrzeb, jeśli chcesz:
 
-### [Dziennik - skrót po Polsku](https://www.icloud.com/shortcuts/9f21769ea4554204b822450f6fac9de1)
+### [Dziennik - skrót po Polsku][jbp]
 
-### [Journal Basic - shortcut in English](https://www.icloud.com/shortcuts/9072bc23feee4c01b833150dd2733375)
+### [Journal Basic - shortcut in English][jb]
 
-### Wersje skrótu
+## Wersje skrótu
 
 Powyżej do pobrania są najnowsze wersje mojego skrótu. A oto historia:
 
+- Wersja 2.1 (25 listopada 2022) - małe usprawnienie formatowania celów w iOS16
 - Wersja 2.0 (29 sierpnia 2022) - Usprawnienie: jak nic nie wpiszesz i wciśniesz ENTER, to się nie doda pusty wpis do dziennika oraz nowa funkcja: opcja w menu „Otwórz dziennik" otwiera dziennik w domyślnym edytorze markdown (polecam darmowy Runestone lub płatny iA Writer)
-- Wersja 1.0 (17 czerwca 2022) - pierwsza wersja skrótu: [Dziennik 1.0 - skrót po Polsku](https://www.icloud.com/shortcuts/1a67dc3998554aca9cd18bc026fd91df), [Journal Basic 1.0 - shortcut in English](https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3) oraz [z opcją czytania Pisma Świętego na dzisiaj](/pl/czytanie/), czyli [Dziennik i Pismo 1.0](https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54).
+- Wersja 1.0 (17 czerwca 2022) - pierwsza wersja skrótu: [Dziennik 1.0 - skrót po Polsku][jbp1], [Journal Basic 1.0 - shortcut in English][jb1] oraz [z opcją czytania Pisma Świętego na dzisiaj](/pl/czytanie/), czyli [Dziennik i Pismo 1.0][jbp1p].
 
 ## Chcesz poznać co to jest "dziennik w trakcie pracy" i być bardziej produktywnym?
 
@@ -44,6 +45,13 @@ Od lat nie tylko piszę dziennik rano i wieczorem, ale także przy tej okazji pl
 ## Znasz angielski? Poznaj moją całą historię pisania dziennika!
 
 Ten skrót to owoc wielu lat zabawy skrótami Siri dla potrzeb pisania dziennika, który praktycznie codziennie piszę od 2016 roku. [Na moim blogu angielskim poznasz całą historię](/journal/).
+
+[jb]: https://www.icloud.com/shortcuts/99676362fb504236bed1e69a42353c2a
+[jbp]: https://www.icloud.com/shortcuts/8ef89255630844ea8c66a6a287a03c6a
+[jb1]: https://www.icloud.com/shortcuts/5fb5caf55e744b6189d53876bd799ba3
+[jbp1]: https://www.icloud.com/shortcuts/1a67dc3998554aca9cd18bc026fd91df
+[jbp1p]: https://www.icloud.com/shortcuts/723037047ec845a2b33294f1ac825a54
+
 
 [n]: https://michael.gratis/nozbe_pl
 [np]: https://michael.gratis/nozbepersonal_pl
