--- a/en/_posts/2022-11-24-thankful.md
+++ b/en/_posts/2022-11-24-thankful.md
@@ -1,6 +1,7 @@
 ---
 tags: [short, life]
 cover: thankful.jpg
+linked: https://www.linkedin.com/pulse/underrated-productivity-habit-thankful-practice-every-sliwinski
 ---
 
 # Be thankful and practice gratitude every day
