photo fix aulery

--- a/en/_posts/2022-12-07-aulery.md
+++ b/en/_posts/2022-12-07-aulery.md
@@ -1,6 +1,6 @@
 ---
 tags: [business,nozbe]
-cover: "aulery.jpg"
+cover: "aulery-2.jpg"
 ---
 
 # Aulery - how I won my first startup award
@@ -13,7 +13,7 @@ In a few days the Polish startup community will be awarding new startups [Aulery
 
 ## It all started with [Aula Polska][ap] meetings in Warsaw…
 
-Back then I was living in Warsaw, Poland and I was regularly attending regular startup meetings. My favorite one was [Aula Polska][ap] organized by my buddies [Artur Kurasiński](https://www.linkedin.com/in/arturkurasinski/) and [Krzysztof "Chris" Kowalczyk](https://www.linkedin.com/in/krzysztofkowalczyk/) (on the photo above, awarding me with my "Auler"). As I was a lone startup owner, meeting with like-minded entrepreneurs was a treat for me.
+Back then I was living in Warsaw, Poland and I was regularly attending regular startup meetings. My favorite one was [Aula Polska][ap] organized by my buddies [Artur Kurasiński](https://www.linkedin.com/in/arturkurasinski/) and [Krzysztof "Chris" Kowalczyk](https://www.linkedin.com/in/krzysztofkowalczyk/). As I was a lone startup owner, meeting with like-minded entrepreneurs was a treat for me.
 
 After all, [I founded Nozbe in 2007](/interview/) and by the time it was 2009, I only had two additional part-time team members and that's it. At that time Nozbe was already a small global success and my peers from Poland were impressed that most of my users where not Polish, but American.
 
@@ -23,7 +23,7 @@ Anyway, back to the night of the first Aulery awards. I remember they were prepa
 
 One of the co-organizers pressured me so much (using a now-defunct Polish version of Twitter - Blip), that together with my wife we had to figure out how we'll make it happen.
 
-I eventually came to this meeting while still not having any idea that there will be an award ceremony and that I will get one!
+I eventually came to this meeting while still not having any idea that there will be an award ceremony and that I will get one! And that Chris will be giving it to me:
 
 ![{{ page.title }} 2](/img/aulery.jpg)
 
