--- a/en/_posts/2022-12-14-keycard.md
+++ b/en/_posts/2022-12-14-keycard.md
@@ -3,7 +3,7 @@ tags: [short, business]
 cover: keycard.jpg
 ---
 
-# What’s a keycard moment in your business?
+# What’s a broken keycard moment in your business?
 
 Recently I mentioned on this blog a [cup holder effect](/cupholder), which is this situation that one small thing can ruin the whole experience for you. This one is similar, but from a business perspective. I call a **keycard moment** a glitch in your business, that causes a disproportionate harm to all of your other efforts. You might be doing everything well and your customers are happy, until they stumble upon a malfunctioning keycard which destroys that experience which you so carefully built. And the worst part is that you might not notice it, because it’s just a keycard. Let me explain:
 
