szaffi video timestamp

--- a/pl/_posts/2020-07-25-szaffi.md
+++ b/pl/_posts/2020-07-25-szaffi.md
@@ -34,7 +34,7 @@ To, że jego książka świetnie się sprzedaje, wynika nie tylko z tego, że je
 
 Który rozkłada na części pierwsze w 36. minucie swojego rewelacyjnego wystąpienia na InfoShare 2017:
 
-{% include video.html id="Y-R1EJ3EqcU" %}
+{% include video.html id="Y-R1EJ3EqcU" start="2160" %}
 
 ## Nasza przyjaźń i droga do 100 000 sprzedanych egzemplarzy
 
