--- a/pl/_posts/2020-07-25-szaffi.md
+++ b/pl/_posts/2020-07-25-szaffi.md
@@ -40,7 +40,7 @@ Który rozkłada na części pierwsze w 36. minucie swojego rewelacyjnego wystą
 
 Dzięki wspólnemu Mastermindowi i ciągłemu kontaktowi mogliśmy wzajemnie uczyć się od siebie, lepiej się poznawać i na dobre zaprzyjaźnić. W roku 2018 wspólnie wystąpiliśmy na konferencji InfoShare, [ja mówiłem o pracy w modelu "No Office"](/InfoShare) a on o "Życiu na własnych zasadach", gdzie w 20-tej minucie wspomniał o mnie:
 
-{% include video.html id="A6Uhm_vdsoQ" %}
+{% include video.html id="A6Uhm_vdsoQ" start="1200" %}
 
 W międzyczasie sprzedaż książki szła świetnie, i już od kilku miesięcy Szaffi przygotowywał się do osiągnięcia magicznej granicy 100 tysięcy sprzedanych egzemplarzy. Kupiłem jeden z pierwszych egzemplarzy książki kilka lat temu, ale dałem go w prezencie mojemu bratu, dlatego myślałem, aby kupić znowu jego książkę do swojej biblioteczki. Do tego miałem pomysł, aby dać ją w prezencie kilku osobom...
 
