--- a/en/_posts/2023-02-01-nozbe16.md
+++ b/en/_posts/2023-02-01-nozbe16.md
@@ -23,23 +23,37 @@ Nozbe helps people, especially small business owners and entrepreneurs, keep bal
 
 Together with our Nozbe users we've coined a term called: "task-based communication", which means you communicate your actions through tasks shared with just yourself, or your team or family members. Results:
 
-Fewer meetings! Want to call a meeting? First create a task for it and explain everything in comments. Usually then the meeting will be unnecessary or it'll be much shorter than planned!
+### Fewer meetings!
 
-Fewer emails! Instead of an email, create a task for your colleague and explain everything in comments. This way other people can join in and add their expertise without unnecessary CCs, BCCs.
+Want to call a meeting? First create a task for it and explain everything in comments. Usually then the meeting will be unnecessary or it'll be much shorter than planned!
 
-Fewer reports! As CEO I don't ask people to write reports for me - all I do is open the "Activity" view in Nozbe or just go through projects and see clearly what's going on. It's all in the tasks!
+### Fewer emails!
 
-Work-life balance! In Nozbe you can have your work Nozbe in one view and your own tasks or family Nozbe in another. All in one app - so you can manage it all in Nozbe!
+Instead of an email, create a task for your colleague and explain everything in comments. This way other people can join in and add their expertise without unnecessary CCs, BCCs.
 
-Why after 16 years I'm still running Nozbe? Because I still believe we can help many more millions improve their work-life balance, and because I myself still need it - when running a company and managing family of 5.
+### Fewer reports!
 
-Why work on Nozbe when there's so much competition? Our customers still choose Nozbe over competing apps because it's simple, easy to get started, and yet powerful enough to organize both private life and the business.
+As CEO I don't ask people to write reports for me - all I do is open the "Activity" view in Nozbe or just go through projects and see clearly what's going on. It's all in the tasks!
+
+### Work-life balance!
+
+In Nozbe you can have your work Nozbe in one view and your own tasks or family Nozbe in another. All in one app - so you can manage it all in Nozbe!
+
+## People keep asking me why…
+
+### Why after 16 years I'm still running Nozbe?
+
+Because I still believe we can help many more millions improve their work-life balance, and because I myself still need it - when running a company and managing family of 5.
+
+### Why work on Nozbe when there's so much competition?
+
+Our customers still choose Nozbe over competing apps because it's simple, easy to get started, and yet powerful enough to organize both private life and the business.
 
 ## What do I wish for?
 
-If you're reading this and haven't tried Nozbe, give it a shot today! If you love Nozbe, spread the love and recommend us to your peers. And send me a message at michael@nozbe.com how Nozbe has changed your life. Thank you! These messages always make my day and keep me going!
+If you're reading this and haven't tried Nozbe, give it a shot today! If you love Nozbe, spread the love and recommend us to your peers. And send [me a message](/contact/) how [Nozbe][n] has changed your life. Thank you! These messages always make my day and keep me going!
 
-Nozbe - a simple tool for business owners to get their business and family life organized.
+### [Nozbe][n] - a simple tool for business owners to get their business and family life organized.
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
