--- a/en/_posts/2023-02-01-nozbe16.md
+++ b/en/_posts/2023-02-01-nozbe16.md
@@ -1,6 +1,7 @@
 ---
 tags: [business,nozbe]
 cover: "nozbe16.jpg"
+linked: https://www.linkedin.com/pulse/sweet-sixteen-nozbe-why-im-still-excited-business-ive-sliwinski
 ---
 
 # 16 years of Nozbe
