--- a/en/_posts/2023-02-13-mini13ultra.md
+++ b/en/_posts/2023-02-13-mini13ultra.md
@@ -20,21 +20,21 @@ Comparing my cute iPhone Mini to the latest Samsung device serves only one purpo
 
 ### Geekbench score - iPhone Mini is 15% faster than Galaxy Ultra
 
-**Single-Core Score** for my iPhone 13 Mini is at 1728 which is 15% faster than the 1509 of the Samsung Galaxy 23 Ultra. That's right, my Mini is still 15% than the latest and the greatest from Samsung (or Qualcomm Snapdragon 8 Gen 2 for Galaxy).
+**Single-Core Score** for my iPhone 13 Mini is at 1728 which is 15% faster than the 1509 of the Samsung Galaxy 23 Ultra. That's right, my Mini is still significanly more powerful than the latest and the greatest from Samsung (or Qualcomm Snapdragon 8 Gen 2 for Galaxy).
 
 **Multi-Core Score** is almost the same, the iPhone 13 Mini is only 2% slower (4589) vs the Ultra (4714). There's barely a difference.
 
 ### Speedometer - iPhone Mini is TWICE as fast!
 
-**Speedometer 2.0**, which is a test for HTML/JavaScript rendering speed, my iPhone 13 Mini **is more than twice as fast!** The A15 chip blows the Snapdragon out of the water with 321 points to 146. For the context, my M1-powered [iPad 13 Pro](/pro13) is only slightly faster at 331. So yes, for browsing web sites on the go, my Mini will be faster than many more upcoming Samsung phones in the future to come.
+**Speedometer 2.0**, which is a test for HTML/JavaScript rendering speed, my iPhone 13 Mini **is more than twice as fast!** The A15 chip blows the Snapdragon out of the water with 321 points to 146. For the context, my M1-powered [iPad 13 Pro](/pro13) is only slightly faster at 331. So yes, for browsing web sites on the go, my Mini will be faster than many more upcoming Samsung phones years more in the future.
 
 ## What about other tests and aspects? Not so bad either!
 
 There are many more tests we can run and of course in some of them the Samsung flagship phone has the edge over the Mini, especially when it comes to graphics performance.
 
-Samsung Ultra also has a dynamic-refresh rate display, something the Mini doesn't have - and it's my main complaint about it vs the iPhone Pro. I do miss the fluid pro-motion display sometimes.
+Samsung Ultra also has a dynamic-refresh rate display, something the Mini doesn't have - and it's my main complaint about it vs the iPhone Pro. I do miss the fluid pro-motion display.
 
-Camera system is also better in Pro iPhones and in the Samsung Ultra. Especially I'm blown away by the zoom on the Samsung. Yet, the photos my Mini takes are not that bad at all!
+Camera system is also better in Pro iPhones and in the Samsung Ultra. Especially [I'm blown away by the zoom on the Samsung](https://www.youtube.com/shorts/6P1VRs68Cqo). Yet, the photos my Mini takes are not bad at all!
 
 Looking at all these specs and tests what struck me the most is that my last-gen iPhone Mini is not really that much slower than the current latest iPhones and can be even faster than Android flagships. This really reassures me that this phone is a keeper! And will probably serve me past the iPhone 15 or even 16? We'll see.
 
@@ -46,7 +46,7 @@ My wife has an iPhone 13 Pro Max. Whenever I pick up her phone, I'm stunned how 
 * **It's light** - it's made of aluminum, not steel, so it's very light which not only helps me use it with one hand in an easier way, but also lets me carry it in short pants.
 * **It's delight** - having such a small and light device that is at the same time **so powerful** is still very surprising to me and joyful. I love it.
 
-What I'd love to have on the Mini is the 120Hz refresh rate on the display, the *pro-motion display* and a better battery. Maybe in a year or two, I'll [replace the battery for a new one with bigger capacity](/battery/) just like I did it with my daughter's iPhone SE?
+What I'd love to have on the Mini is the 120Hz *pro-motion display* and a better battery. Maybe in a year or two, I'll [replace the battery for a new one with bigger capacity](/battery/) just like I did it with my daughter's iPhone SE?
 
 ## The iPhone 13 Mini - the most powerful small smartphone ever?
 
