MKBHD and variables

--- a/en/_posts/2023-02-13-mini13ultra.md
+++ b/en/_posts/2023-02-13-mini13ultra.md
@@ -18,6 +18,8 @@ Last year [instead of upgrading from iPhone 13 Pro to 14 Pro, I “upgraded” t
 
 Comparing my cute iPhone Mini to the latest Samsung device serves only one purpose - to prove to myself and to you - that this small iPhone is still a fast smartphone and that it might serve me great for many more years to come. It also shows how much faster the A-series processors are ahead of its rivals.
 
+What prompted me to write this post was [MKBHD's test of the Samsung Galaxy 23 Ultra](https://www.youtube.com/watch?v=zhoTX0RRXPQ) where he wrote that this smartphone was "*better than you think*" and when I saw this phone test scores, I actually realized that a [tiny and cute](/mini/) smartphone in my pocket - [iPhone 13 Mini](/mini13) is truly both *better and more powerful than you think*. Here's why:
+
 ### Geekbench score - iPhone Mini is 15% faster than Galaxy Ultra
 
 **Single-Core Score** for my iPhone 13 Mini is at 1728 which is 15% faster than the 1509 of the Samsung Galaxy 23 Ultra. That's right, my Mini is still significanly more powerful than the latest and the greatest from Samsung (or Qualcomm Snapdragon 8 Gen 2 for Galaxy).
@@ -34,25 +36,34 @@ There are many more tests we can run and of course in some of them the Samsung f
 
 Samsung Ultra also has a dynamic-refresh rate display, something the Mini doesn't have - and it's my main complaint about it vs the iPhone Pro. I do miss the fluid pro-motion display.
 
-Camera system is also better in Pro iPhones and in the Samsung Ultra. Especially [I'm blown away by the zoom on the Samsung](https://www.youtube.com/shorts/6P1VRs68Cqo). Yet, the photos my Mini takes are not bad at all!
+Camera system is also better in Pro iPhones and in the Samsung Ultra. Especially [I'm blown away by MKBHD's demo of the zoom on the Samsung](https://www.youtube.com/shorts/6P1VRs68Cqo). Yet, the photos my Mini takes are not bad at all!
 
 Looking at all these specs and tests what struck me the most is that my last-gen iPhone Mini is not really that much slower than the current latest iPhones and can be even faster than Android flagships. This really reassures me that this phone is a keeper! And will probably serve me past the iPhone 15 or even 16? We'll see.
 
 ## The joy of using the smallest iPhone
 
-My wife has an iPhone 13 Pro Max. Whenever I pick up her phone, I'm stunned how heavy and bulky it is. I'm just used to super light Mini. It's because the Mini gives me twice the joy:
+My wife has an iPhone 13 Pro Max. Whenever I pick up her phone, I'm stunned how heavy and bulky it is. I'm just used to super light Mini. It's because the Mini gives me maximum joy:
 
 * **It's small** - the physical dimensions of the iPhone are small which lets me use it with one hand and put it into any pants pockets.
 * **It's light** - it's made of aluminum, not steel, so it's very light which not only helps me use it with one hand in an easier way, but also lets me carry it in short pants.
-* **It's delight** - having such a small and light device that is at the same time **so powerful** is still very surprising to me and joyful. I love it.
+* **It's a delight** - having such a small and light device that is at the same time **so powerful** is still very surprising to me and joyful. I love it.
 
-What I'd love to have on the Mini is the 120Hz *pro-motion display* and a better battery. Maybe in a year or two, I'll [replace the battery for a new one with bigger capacity](/battery/) just like I did it with my daughter's iPhone SE?
+What I'd love to have on the Mini is the 120Hz *pro-motion display* and a better battery. Maybe in a year or two, I'll replace the battery for a new one with bigger capacity [just like I did it with my daughter's iPhone SE](/battery/)?
 
 ## The iPhone 13 Mini - the most powerful small smartphone ever?
 
 Or the most joyful? Or both?
 
 I don't care. I love it and it does blow me away that it can be faster than the latest flagships from its competitors!
+
+<!--
+URL: {{ page.url }}
+ID: {{ page.id }}
+DIR: {{ page.dir }}
+NAME: {{ page.name }}
+PATH: {{ page.path }}
+-->
+
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
