--- a/en/_posts/2023-02-15-2022.md
+++ b/en/_posts/2023-02-15-2022.md
@@ -1,6 +1,6 @@
 ---
 tags: [year]
-cover: "michael.glasses.jpg"
+cover: "2022.jpg"
 ---
 
 # 2022 review - wind of change
@@ -34,7 +34,7 @@ These past months, especially December of 2022 and January of 2023 I was working
 
 It's like I finally realized what I was doing all along - I was helping small business owners like myself (duh!) maintain a work-life balance thanks to Nozbe - an app where they can manage it all - their business tasks and projects, as well as their private ones!
 
-> Nozbe is a work-life balance app!
+> Nozbe is a **work-life balance** app!
 
 That's why this year we'll be focusing on two things:
 
@@ -45,7 +45,7 @@ That's why this year we'll be focusing on two things:
 
 If you're a business owner yourself and you're struggling to maintain a work-life balance - [check out Nozbe today][n].
 
-> [Nozbe][n] - simplify your life!
+> [Nozbe][n] - **simplify** your life!
 
 As I mentioned above, I hired a business coach - [Marta Raga](https://instagram.com/marta.raga) - she is specializing in helping power women overcome their anxiety problems - but she uses me to train her skills and… she helped me a lot process my issues and limiting beliefs to help me grow as a CEO. I'm having regular monthly sessions with her and I'm planning to continue next year, too!
 
@@ -129,7 +129,7 @@ I think I needed to be shaken out the same-old-same-old thinking and finally for
 
 In 2023 I will keep on growing while learning how to convey the message of the kind of powerful change my [Nozbe][n] app can bring to small business owners in maintaining their work-life balance.
 
-**Here's to a great 2023 🥂 **
+**Here's to a great 2023** 🥂
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
